# scott-pilgrim-contra-os-bugs

./: CMakeLists.txt  README.md
src/: headers.h  main.c
src/assets/movies/: lucaslee_intro.ogv  matthew_final.ogv  matthew_intro.ogv  roxanne_intro.ogv  todd_intro.ogv
src/config/: construct.c  initialize.c
src/pages/cutscenes/: final.c  intro.c  lucasleefinal.c  lucasleeintro.c  mathewfinal.c  mathewintro.c  roxannefinal.c  roxanneintro.c  toddfinal.c  toddintro.c  tutorial.c
src/pages/game/: game.c  segunda.c  venceu.c
src/pages/game/fase1/: fase1.c  fase1.h
src/pages/game/fase2/: fase2.c  fase2.h
src/pages/game/fase3/: fase3.c
src/pages/game/fase4/: fase4.c
src/pages/game/fase5/: fase5.c
src/pages/intro/: intro.c
src/pages/menu/: menu.c  settings.c
src/pages/transition/: end.c
